--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".ui.student.home.HomeFragment">
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/fh_edit_search"
