--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -1,21 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp">
 
-    <ImageView
-        android:id="@+id/item_image_view"
+    <androidx.cardview.widget.CardView
         android:layout_width="150dp"
-        android:src="@drawable/ic_launcher_background"
         android:layout_height="150dp">
-    </ImageView>
 
-    <TextView
-        android:id="@+id/item_tv_title"
-        android:layout_width="150dp"
-        android:textSize="16sp"
-        android:layout_marginTop="120dp"
-        android:layout_height="30dp"
-        />
+        <ImageView
+            android:id="@+id/item_image_view"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/ic_launcher_background" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/item_tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center_horizontal"
+            android:text="@string/group_1"
+            android:textSize="32sp"
+            android:layout_marginBottom="10dp"/>
+
+    </androidx.cardview.widget.CardView>
+
+
+</LinearLayout>
