--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
 
 
     //цвет курсора
+
     <style name="ColoredHandleThemeForWholeApp">
         <item name="colorAccent">@color/colorGeekTech</item>
     </style>
@@ -16,5 +17,48 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+
+    <style name="ButtonMain">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:paddingStart">20dp</item>
+        <item name="background">@drawable/button</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:background">@color/colorGeekTech</item>
+        <item name="android:layout_marginTop">12dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:layout_marginRight">20dp</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="ButtonMainO">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:paddingStart">20dp</item>
+        <item name="background">@drawable/button</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:background">@color/colorGeekTech</item>
+        <item name="android:layout_marginTop">12dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:layout_marginRight">20dp</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="TextView">
+        <item name="android:textSize">16dp</item>
+        <item name="android:textColor">@color/colorGeekTech</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_margin">15dp</item>
+
+    </style>
 
 </resources>
