--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -108,7 +108,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="bottom"
-            android:text="@string/_21"
+            android:text="21"
             android:textColor="@android:color/black"
             android:textSize="20sp"
             android:textStyle="bold"
