--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="vertical"
-    tools:context=".ui.admin.ProfileFragment">
+    tools:context=".ui.admin.profile.ProfileFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,9 +24,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
             android:layout_gravity="center_vertical"
-            android:text="10" />
+            android:text="10"
+            android:textSize="25sp" />
 
     </LinearLayout>
 
@@ -167,7 +167,6 @@
             android:text="@string/group" />
 
     </LinearLayout>
-
 
 
 </LinearLayout>
