--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -15,6 +15,7 @@
             android:src="@drawable/ic_launcher_background" />
 
         <TextView
+            android:background="@android:color/white"
             android:id="@+id/item_tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
