--- a/app/src/main/res/menu/bottom_nav_menu_admin.xml
+++ b/app/src/main/res/menu/bottom_nav_menu_admin.xml
@@ -2,13 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_chat"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:id="@+id/navigation_network"
+        android:icon="@drawable/ic_baseline_language_24"
+        android:title="@string/network" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_chat"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="@string/title_chat" />
+
+    <item
+        android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_profile" />
 
 </menu>
