--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view_student"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:attr/windowBackground"
         android:visibility="gone"
@@ -44,11 +44,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:attr/windowBackground"
-        android:visibility="visible"
+        android:visibility="gone"
         app:menu="@menu/bottom_nav_menu_admin" />
 
     </RelativeLayout>
-
 
     <fragment
         android:id="@+id/nav_host_fragment"
@@ -59,14 +58,5 @@
         app:layout_constraintBottom_toTopOf="@id/LinearLayout"
         app:layout_constraintTop_toBottomOf="@id/app_bar"
         app:navGraph="@navigation/mobile_navigation" />
-
-
-    <FrameLayout
-        android:id="@+id/container_fr"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
