--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -15,16 +15,27 @@
             android:src="@drawable/ic_launcher_background" />
 
         <TextView
-            android:background="@android:color/white"
+            android:textColor="#fff"
             android:id="@+id/item_tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
             android:text="@string/group_1"
+            android:elevation="1dp"
             android:textSize="32sp"
             android:layout_marginBottom="10dp"/>
 
+        <TextView
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:background="#000"
+            android:textStyle="bold"
+            android:layout_marginTop="100dp"
+            />
+
     </androidx.cardview.widget.CardView>
+
+
 
 
 </LinearLayout>
