--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -12,7 +12,7 @@
             android:id="@+id/item_image_view"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:src="@drawable/ic_launcher_background" />
+            android:src="@drawable/logo_geek" />
 
         <TextView
             android:textColor="#fff"
@@ -23,14 +23,14 @@
             android:text="@string/group_1"
             android:elevation="1dp"
             android:textSize="32sp"
-            android:layout_marginBottom="10dp"/>
+            />
 
         <TextView
             android:layout_width="150dp"
-            android:layout_height="50dp"
-            android:background="#000"
+            android:layout_height="40dp"
+            android:background="#002147"
             android:textStyle="bold"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="110dp"
             />
 
     </androidx.cardview.widget.CardView>
