--- a/app/src/main/res/layout/activity_phone.xml
+++ b/app/src/main/res/layout/activity_phone.xml
@@ -79,7 +79,7 @@
                 android:layout_marginTop="25dp"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:onClick="onClick"
-                android:background="@color/colorGeekTech"
+                android:background="@drawable/button"
                 android:text="@string/enter"
                 android:textColor="@android:color/white"
                 android:textSize="13sp"
@@ -170,7 +170,7 @@
                 android:layout_height="45dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="25dp"
-                android:background="@color/colorGeekTech"
+                android:background="@drawable/button"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:onClick="OnCode"
                 android:text="@string/enter"
