--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -16,5 +16,43 @@
         app:layout_constraintStart_toStartOf="parent"
         />
 
+    <TextView
+        android:layout_marginTop="250dp"
+        android:layout_width="match_parent"
+        android:textColor="@color/colorGeekTech"
+        android:text="Тема урока"
+        android:textStyle="bold"
+        android:layout_marginLeft="20dp"
+        android:layout_height="wrap_content"/>
+
+
+    <TextView
+        android:layout_marginTop="270dp"
+        android:layout_width="match_parent"
+        android:textColor="@color/colorGeekTech"
+        android:text="Архитектура"
+        android:layout_marginLeft="20dp"
+        android:layout_height="wrap_content"/>
+
+
+    <TextView
+        android:layout_marginTop="300dp"
+        android:layout_width="match_parent"
+        android:textStyle="bold"
+        android:textColor="@color/colorGeekTech"
+        android:text="Описание урока"
+        android:layout_marginLeft="20dp"
+        android:layout_height="wrap_content"/>
+
+
+    <TextView
+        android:layout_marginTop="350dp"
+        android:layout_width="match_parent"
+        android:textStyle="bold"
+        android:textColor="@color/colorGeekTech"
+        android:text="@string/aa"
+        android:layout_marginLeft="20dp"
+        android:layout_height="wrap_content"/>
+
 
 </RelativeLayout>
